<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp">

        <RadioButton
            android:id="@+id/city_name_RB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/with_city_name" />

        <EditText
            android:id="@+id/city_name_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:hint="@string/city_name"/>

        <RadioButton
            android:id="@+id/gps_location_RB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/with_gps_location"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/save_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>

        <Button
            android:id="@+id/list_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_PB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

</LinearLayout>